[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-risk-ml"
version = "0.2.0"
description = "Sovereign default prediction and risk-aware bond portfolio optimisation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Maksim Silchenko", email = "mthylinao@gmail.com" }]
keywords = ["sovereign-risk", "default-prediction", "reinforcement-learning", "macro"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10",
    "requests>=2.30",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "tensorflow>=2.13,<2.16",
    "xgboost>=1.7,<3.0",
]
test = [
    "pytest>=7.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/thylinao1/Sovereign-Risk-and-Portfolio-Allocation"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
